--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon --watch src --exec 'ts-node src/index.ts'"
+    "dev": "nodemon --watch src --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,9 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@octokit/types": "^13.5.0",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
