--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@octokit/types": "^13.5.0",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
